--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/autoswitch-linkedin-entreprise/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Commentez avec votre entreprise</title>
     <script type="module" crossorigin src="/autoswitch-linkedin-entreprise/assets/index.d0b1f01f.js"></script>
     <link rel="modulepreload" href="/autoswitch-linkedin-entreprise/assets/vendor.36650f74.js">
     <link rel="stylesheet" href="/autoswitch-linkedin-entreprise/assets/index.40f54dd6.css">
