fix: change app name

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Commentez avec votre entreprise</title>
   </head>
   <body>
     <div id="app"></div>
