--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/autoswitch-linkedin-entreprise/favicon.ico" />
+    <link rel="icon" href="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Commentez avec votre entreprise</title>
     <script type="module" crossorigin src="/autoswitch-linkedin-entreprise/assets/index.d0b1f01f.js"></script>
