--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Commentez avec votre entreprise</title>
+    <script defer data-domain="riderx.github.io/autoswitch-linkedin-entreprise" src="https://plausible.io/js/plausible.js"></script>
     <script type="module" crossorigin src="/autoswitch-linkedin-entreprise/assets/index.8f74f7cf.js"></script>
     <link rel="modulepreload" href="/autoswitch-linkedin-entreprise/assets/vendor.2f20791f.js">
     <link rel="stylesheet" href="/autoswitch-linkedin-entreprise/assets/index.e4c7084c.css">
